--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/bytenode/bytenode#readme",
   "devDependencies": {
     "electron": "^12.0.1",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "source-map": "^0.7.3"
   }
 }
